...
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/tvAccountHolderName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="John Doe"
                android:textColor="@color/text_primary"
                android:textSize="16sp"
                android:background="@drawable/default_badge_background"
                android:padding="12dp"
                android:layout_marginBottom="24dp" />

...
